# exstream

./: CMakeLists.txt  README.md  use-clang.cmake
include/: bfstream.h  bstream.h  vector_streambuf.h  zstream.h
src/: CMakeLists.txt  basic_types.h  bfilebuf.cpp  bfilebuf.h  bfstream.cpp  bfstream.h  bstream.cpp  bstream.h  file_exception.h  filebuf.cpp  filebuf.h  fstream.cpp  fstream.h  miniz.cpp  miniz.h  rentable_ptr.h  stream.cpp  stream.h  substream.cpp  substream.h  vector_streambuf.cpp  vector_streambuf.h  zexception.h  zfstream.cpp  zfstream.h  zip_file_header.cpp  zip_file_header.h  zip_streambuf.h  zip_streambuf_compress.cpp  zip_streambuf_decompress.cpp  zstream.cpp  zstream.h  zstream_i.cpp  zstream_o.cpp
src/binary/: binary.cpp  binary.h  binary_array.cpp  binary_array.h  binary_entity.cpp  binary_entity.h  binary_vector.cpp  binary_vector.h  index_table.cpp  index_table.h  key_table.h  named_index_table.cpp  named_index_table.h  padded_binary.cpp  padded_binary.h  ref_binary.cpp  ref_binary.h  sized_index.cpp  sized_index.h
src/rptr/: const_rented_ptr.h  rentable_ptr.h  rented_ptr.h
src/rptr/_define/: const_rented_ptr.h  rent_ptr_base.h  rentable_ptr.h  rented_ptr.h
test/: CMakeLists.txt  rptr_test.cpp  zstream_test.cpp
